src/test/ui/span/issue28498-reject-passed-to-fn.stderr
error[E0597]: `first_dropped` does not live long enough
  --> $DIR/issue28498-reject-passed-to-fn.rs:35:19
   |
LL |     foo1 = Foo(1, &first_dropped, Box::new(callback));
   |                   ^^^^^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `first_dropped` dropped here while still borrowed
   | borrow might be used here, when `foo1` is dropped and runs the `Drop` code for type `Foo`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
